--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
-    "sass": "^1.43.5"
+    "sass": "^1.43.5",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
