--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@next/bundle-analyzer": "^12.0.4",
+    "@prisma/client": "^3.14.0",
     "antd": "^4.17.1",
     "aos": "^2.3.4",
     "babel-plugin-import": "^1.13.3",
+    "lodash": "^4.17.21",
     "next": "12.0.4",
     "next-plugin-antd-less": "^1.5.2",
     "react": "17.0.2",
@@ -24,11 +26,13 @@
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
-    "@types/node": "16.11.10",
+    "@types/lodash": "^4.14.182",
     "@types/react": "17.0.36",
     "@types/react-copy-to-clipboard": "^5.0.2",
+    "dotenv": "^16.0.1",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
-    "typescript": "4.5.2"
+    "prisma": "^3.14.0",
+    "typescript": "^4.6.4"
   }
 }
