--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB (Preview).
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DATABASE_URL='mysql://v2klt73eq3zm:pscale_pw_5PAUCchzXPun8UOZN0eomTTxI4V3L7MLB44zTstDhQ0@6p24kn0gfrsh.ap-southeast-2.psdb.cloud/brisya-wedding-prisma?sslaccept=strict'
+<!-- DATABASE_URL="postgres://xcthumhi:0YqmMMaubHcK0sd29ei-9fgoAnt-9S6D@rosie.db.elephantsql.com/xcthumhi" -->
