--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
   "devDependencies": {
     "@types/aos": "^3.0.4",
     "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.33",
     "@types/react": "17.0.36",
     "@types/react-copy-to-clipboard": "^5.0.2",
     "dotenv": "^16.0.1",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
     "prisma": "^3.14.0",
+    "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
 }
