--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@next/bundle-analyzer": "^12.0.4",
-    "@prisma/client": "^3.14.0",
     "antd": "^4.17.1",
     "aos": "^2.3.4",
+    "axios": "^0.27.2",
     "babel-plugin-import": "^1.13.3",
+    "firebase-admin": "^10.2.0",
     "lodash": "^4.17.21",
     "next": "12.0.4",
     "next-plugin-antd-less": "^1.5.2",
@@ -22,19 +23,17 @@
     "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "sass": "^1.43.5",
-    "use-sound": "^4.0.1"
+    "use-sound": "^4.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^17.0.33",
     "@types/react": "17.0.36",
     "@types/react-copy-to-clipboard": "^5.0.2",
-    "dotenv": "^16.0.1",
+    "@types/uuid": "^8.3.4",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.4",
-    "prisma": "^3.14.0",
-    "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
 }
